--- a/application/modules/sistema/views/scripts/cargo/index.phtml
+++ b/application/modules/sistema/views/scripts/cargo/index.phtml
@@ -3,7 +3,7 @@
 		<ol class="breadcrumb m-b-0">
 			<li><a href="">Home</a></li>
 			<li>Configuração</li>
-			<li class="active">Cargo/Função</li>
+			<li class="active">Cargo</li>
 		</ol>
 	</div>
 
