--- a/application/modules/cadastro/views/scripts/cliente/index.phtml
+++ b/application/modules/cadastro/views/scripts/cliente/index.phtml
@@ -156,10 +156,8 @@
 	</div>
 </div>
 
-<script type="text/javascript"
-	src="<?php echo $this->baseUrl('/js/cadastro/cliente.js')?>"> </script>
-<script type="text/javascript"
-	src="<?php echo $this->baseUrl('/js/plugins/util.js')?>"> </script>
+<script type="text/javascript" src="<?php echo $this->baseUrl('/js/cadastro/cliente.js')?>"> </script>
+<script type="text/javascript" src="<?php echo $this->baseUrl('/js/plugins/util.js')?>"> </script>
 <script type="text/javascript">
 	function mascara(o,f){
 		v_obj=o;
