Ajustando roteiros x cliente

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -9,22 +9,17 @@
     Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Bootstrap Core CSS -->
-<link href="<?php echo $this->baseUrl()?>/vendor/css/bootstrap.min.css"
-	rel='stylesheet' type='text/css' />
+<link href="<?php echo $this->baseUrl()?>/vendor/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 <!-- Custom CSS -->
-<link href="<?php echo $this->baseUrl()?>/vendor/css/style.css"
-	rel='stylesheet' type='text/css' />
+<link href="<?php echo $this->baseUrl()?>/vendor/css/style.css" rel='stylesheet' type='text/css' />
 <!-- Graph CSS -->
-<link href="<?php echo $this->baseUrl()?>/vendor/css/font-awesome.css"
-	rel="stylesheet">
+<link href="<?php echo $this->baseUrl()?>/vendor/css/font-awesome.css" rel="stylesheet">
 <!-- jQuery -->
 <link
-	href='//fonts.googleapis.com/css?family=Roboto:700,500,300,100italic,100,400'
-	rel='stylesheet' type='text/css'>
+	href='//fonts.googleapis.com/css?family=Roboto:700,500,300,100italic,100,400' rel='stylesheet' type='text/css'>
 <!-- lined-icons -->
 <link rel="stylesheet"
-	href="<?php echo $this->baseUrl()?>/vendor/css/icon-font.min.css"
-	type='text/css' />
+	href="<?php echo $this->baseUrl()?>/vendor/css/icon-font.min.css" type='text/css' />
 <!-- //lined-icons -->
 <script
 	src="<?php echo $this->baseUrl()?>/vendor/js/jquery-1.10.2.min.js"></script>
@@ -32,20 +27,17 @@
 <script src="<?php echo $this->baseUrl()?>/vendor/js/serial.js"></script>
 <script src="<?php echo $this->baseUrl()?>/vendor/js/light.js"></script>
 <script src="<?php echo $this->baseUrl()?>/vendor/js/radar.js"></script>
-<link href="<?php echo $this->baseUrl()?>/vendor/css/barChart.css"
-	rel='stylesheet' type='text/css' />
-<link href="<?php echo $this->baseUrl()?>/vendor/css/fabochart.css"
-	rel='stylesheet' type='text/css' />
+<link href="<?php echo $this->baseUrl()?>/vendor/css/barChart.css" rel='stylesheet' type='text/css' />
+<link href="<?php echo $this->baseUrl()?>/vendor/css/fabochart.css" rel='stylesheet' type='text/css' />
 <!--clock init-->
 <script src="<?php echo $this->baseUrl()?>/vendor/js/css3clock.js"></script>
 <!--Easy Pie Chart-->
 <!--skycons-icons-->
 <script src="<?php echo $this->baseUrl()?>/vendor/js/skycons.js"></script>
-<script
-	src="<?php echo $this->baseUrl()?>/vendor/js/jquery.easydropdown.js"></script>
+<script src="<?php echo $this->baseUrl()?>/vendor/js/jquery.easydropdown.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
+<script type="text/javascript"> var baseUrl = "<?php echo $this->baseUrl(); ?>";</script>
 
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 </head>
 
 <body>
@@ -73,11 +65,7 @@
                 </div>
 				<!--footer section start-->
 				<footer>
-					<p>
-						&copy 2019 Sisgerma . All Rights Reserved | Design by <img
-							id="logo" width="10%"
-							src="<?php echo $this->baseUrl()?>/img/logo/raostec2.png">
-					</p>
+					<p> &copy 2019 Sisgerma . All Rights Reserved | Design by <img id="logo" width="10%" src="<?php echo $this->baseUrl()?>/img/logo/raostec2.png"></p>
 				</footer>
 				<!--footer section end-->
 			</div>
@@ -108,18 +96,12 @@
         });
     </script>
 	<!--js -->
-	<link rel="stylesheet"
-		href="<?php echo $this->baseUrl()?>/vendor/css/vroom.css">
-	<script type="text/javascript"
-		src="<?php echo $this->baseUrl()?>/vendor/js/vroom.js"></script>
-	<script type="text/javascript"
-		src="<?php echo $this->baseUrl()?>/vendor/js/TweenLite.min.js"></script>
-	<script type="text/javascript"
-		src="<?php echo $this->baseUrl()?>/vendor/js/CSSPlugin.min.js"></script>
-	<script
-		src="<?php echo $this->baseUrl()?>/vendor/js/jquery.nicescroll.js"></script>
+	<link rel="stylesheet" href="<?php echo $this->baseUrl()?>/vendor/css/vroom.css">
+	<script type="text/javascript" src="<?php echo $this->baseUrl()?>/vendor/js/vroom.js"></script>
+	<script type="text/javascript" src="<?php echo $this->baseUrl()?>/vendor/js/TweenLite.min.js"></script>
+	<script type="text/javascript" src="<?php echo $this->baseUrl()?>/vendor/js/CSSPlugin.min.js"></script>
+	<script src="<?php echo $this->baseUrl()?>/vendor/js/jquery.nicescroll.js"></script>
 	<script src="<?php echo $this->baseUrl()?>/vendor/js/scripts.js"></script>
-
 	<!-- Bootstrap Core JavaScript -->
 	<script src="<?php echo $this->baseUrl()?>/vendor/js/bootstrap.min.js"></script>
 </body>
